--- a/FinalProject/gallery.css
+++ b/FinalProject/gallery.css
@@ -9,7 +9,7 @@ body{
     height: 400px;
 		border:5px solid black;
 		margin:0 auto;
-    background-color:" #8e68ff";
+    background-color:"green;";
     background-image: url('');
     background-repeat: no-repeat;
     color:#FFFFFF;
@@ -19,9 +19,9 @@ body{
     font-size: 150%;
 }
 .preview{
-		width:10%;
-		margin-left:17%;
-    	border: 10px solid black;
+		width:75%;
+		margin-left:50%;
+    	border: 7px solid black;
 }
 img{
 		width:80%;
