--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,29 +1,130 @@
-body{
-		margin: 2%;
-		border: 1px solid black;
-		background-color: #b3b3b3;
-}
-#image{
-    line-height:400px;
-		width: 400px;
-    height: 400px;
-		border:5px solid black;
-		margin:0 auto;
-    background-color:" #8e68ff";
-    background-image: url('');
-    background-repeat: no-repeat;
-    color:#FFFFFF;
-    text-align: center;
-    background-size: 100%;
-    margin-bottom:25px;
-    font-size: 150%;
-}
-.preview{
-		width:10%;
-		margin-left:17%;
-    	border: 10px solid black;
-}
-img{
-		width:80%;
+
+
+hr.style1 {
+  background-color: green;
+  color: seagreen;
 }
 
+.slideshow{
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+}
+
+.slider{
+  width: 300px;
+  height: 500px;
+  border-radius: 10px;  
+  overflow: hidden;
+}
+
+.slides{
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+
+.slides input{
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img{
+  width: 325px;
+  height: 500px;
+}
+
+/* Manual Slide */
+
+.nav-manual{
+  position: absolute;
+  width: 300px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn{
+  border: 2px solid white;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover{
+  background: white;  
+}
+
+#radio1 ~ .first{
+  margin-right: 0;
+}
+
+#radio2:checked ~ .first{
+  margin-right: -20%;
+}
+
+#radio3:checked ~ .first{
+  margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+  margin-left: -60%;
+}
+
+#radio5:checked ~ .first{
+  margin-left: -80%;
+}
+
+/* Auto Scroll */
+
+.nav-auto{
+  position: absolute;
+  display: flex;
+  width: 300px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.nav-auto div{
+  border: 2px solid white;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.nav-auto div:not(:last-child){
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .nav-auto .auto-btn1{
+  background: white;
+}
+
+#radio2:checked ~ .nav-auto .auto-btn2{
+  background: white;
+}
+
+#radio3:checked ~ .nav-auto .auto-btn3{
+  background: white;
+}
+
+#radio4:checked ~ .nav-auto .auto-btn4{
+  background: white;
+}
+
+#radio5:checked ~ .nav-auto .auto-btn5{
+  background: white;
+}
